[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "did_intel"
version = "2.0.0"
description = "Phone number reputation checking for VoIP professionals"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Siam", email = "siam@example.com"}
]
keywords = ["voip", "robokiller", "reputation", "phone-numbers", "did"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.8.0",
    "lxml>=4.9.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.19.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
    "pyperclip>=1.8.0",
    "requests>=2.31.0",
]

[project.scripts]
didrepchecker = "did_intel.cli:main"
didrepchecker-server = "did_intel.api:main"

[project.urls]
Homepage = "https://github.com/siamakanda/DIDRepChecker"
Repository = "https://github.com/siamakanda/DIDRepChecker"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["did_intel*"]
